--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "axios-middleware": "^0.4.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "typed.js": "^2.1.0"
   }
 }
